--- a/MongoMQTTService/package.json
+++ b/MongoMQTTService/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "mqtt": "^5.6.2",
     "nodemon": "^3.1.0",
@@ -19,6 +20,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.12.12"
   }
 }
